# movies-reco-app

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/: routes.py
backend/app/clients/: llama.py  tmdb.py
backend/app/core/: cache.py  config.py  errors.py  ratelimit.py
backend/app/services/: details_service.py  mood_service.py  providers_service.py  recommend_service.py  search_service.py  trending_service.py
backend/tests/: test_health.py  test_search_input.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/components/: AppNav.vue  SearchBar.vue  SkeletonsCard.vue  SkeletonsGrid.vue
frontend/src/components/common/: ScrollableRow.vue  StarRating.vue
frontend/src/components/home/: HeroCarousel.vue  TrendingRow.vue
frontend/src/components/mood/: MoodFilter.vue
frontend/src/components/movies/: PosterCard.vue
frontend/src/components/ui/: AppNav.vue  ErrorPanel.vue  GlassCard.vue  GlowButton.vue  ProviderChips.vue  ProvidersModal.vue
frontend/src/composables/: useRatings.ts
frontend/src/lib/: errors.ts  img.ts
frontend/src/pages/: Chatbot.vue  Details.vue  Home.vue  Mood.vue  NotFound.vue  Recommend.vue  Search.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/styles/: tailwind.css  theme.css  transitions.css
